@@ -38,6 +38,7 @@
 - Fix: [#19136] SV6 saves with experimental RCT1 paths not imported correctly.
 - Fix: [#19250] MusicObjects do not free their preview images
 - Fix: [#19292] Overflow in totalRideValue
+- Fix: [#19380] Startup crash when no sequences are installed and random sequences are enabled.
 
 0.4.3 (2022-12-14)
 ------------------------------------------------------------------------
